[package]
name = "arcs-yaml-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.17.1"
regex = "1.7.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
