[package]
name = "arcs-ctf_yaml-parser"
version = "0.1.0"
authors = ["Skyler Calaman"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tool to parse and verify the format of YAML files for the ARCS CTF framework"
categories = ["command-line-utilities"]
readme = "README.md"


[[bin]]
name = "arcs-yaml"
path = "src/main.rs"


[dependencies]
lazy_static = "1.4.0"
once_cell = "1.17.1"
regex = "1.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
